--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "serialport": "^7.1.5",
     "socket.io": "^2.2.0"
   }
 }
